--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ ul#head li{
 }
 
 .atas, .footer{
-  background-color: #292b2c;
+  background-color: #31a9e6;
   display:inline-block;
   width: 100%;
 }
