--- a/praktikum4-app/src/App.css
+++ b/praktikum4-app/src/App.css
@@ -1,38 +1,83 @@
-.App {
+ul#head li{
+  text-align: center;
+  color:white;
+  display: inline;
+  list-style: none;
+  font-size: 25pt;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  vertical-align: middle;
+}
+
+.logo{
+  vertical-align: middle;
+}
+
+.atas, .footer{
+  background-color: #31a9e6;
+  display:inline-block;
+  width: 100%;
+}
+
+.tengah{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  margin: auto;
+  display: inline-block;
+  text-align: center;
+  font-family: arial;
+  list-style: none;
+  padding:5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub-judul{
+  padding-left: 5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#color{
+  text-align: left;
+}
+
+#price{
+  text-align: left;
+  color: red;
+}
+
+.price{
+  color:red;
+}
+
+.label{
+  text-align: center;
+  color:rgb(43, 38, 38);
+}
+
+button{
+  background-color: rgb(70, 100, 64);
+  font-size: 18px;
   color: white;
+  border: 0px;
+  border-radius: 3%;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover{
+  box-shadow: 0px 5px 7px #888888;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active{
+  box-shadow: 0 0 0 0;
+}
+
+h4{
+  text-align: center;
+  font-weight: normal;
+}
+
+.chart{
+  padding-left: 90%;
+  vertical-align: middle;
 }
